# yesand-music

./: .flake8  .gitignore  ARCHITECTURE.md  ARDOUR_SETUP.md  AUTO_IMPORT_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_CRITICAL_ISSUES.md  CURRENT_CRITICAL_ISSUES_RESOLVED.md  CURRENT_STATE.md  DEVELOPER_HANDOFF.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT.md  DEVELOPMENT_SUMMARY_SEPT_25_2025.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_LIVE_MIDI_IMPLEMENTATION.md  FEATURES.md  GARAGEBAND_SETUP.md  HUMANIZATION_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MVP.md  JUCE_PLUGIN_DEVELOPMENT.md  LEGACY_SYSTEMS.md  LIVE_MIDI_STREAMING_README.md  LLM_EVALUATION_PLAN.md  MIDI_TO_JSON_IMPLEMENTATION.md  MUSICAL_CONVERSATION_IMPLEMENTATION_SUMMARY.md  MUSICAL_CONVERSATION_README.md  MUSICAL_QUALITY_FIRST_IMPLEMENTATION.md  MUSICAL_QUALITY_IMPLEMENTATION_PLAN.md  MUSICAL_SCRIBE_ARCHITECTURE.md  MVP_IMPLEMENTATION_SUMMARY.md  MVP_README.md  MVP_USER_DRIVEN_README.md  NATIVE_DAW_INTEGRATION.md  OSC_INTEGRATION.md  (+160 more)
backup_complex_plugin/: PluginEditor.h  PluginProcessor.cpp  StyleTransferAudioProcessorEditor.cpp  StyleTransferAudioProcessorEditor.h  StyleTransferAudioProcessor_Humanization.h  StyleTransferAudioProcessor_Humanization_Tests.cpp  StyleTransferAudioProcessor_Tests.cpp
build_minimal/: CMakeCache.txt  Makefile  StyleTransfer_vst3_helper  cmake_install.cmake
commands/: __init__.py  control_plane.py  parser.py  pattern_engine.py  session.py  types.py
docs/: ARCHITECTURE.md  ARDOUR_INTEGRATION.md  ARDOUR_SETUP.md  CONTEXTUAL_INTELLIGENCE_DEVELOPER_GUIDE.md  CONTROL_PLANE.md  DEVELOPER_HANDOFF.md  GARAGEBAND_SETUP.md  JUCE_IMPLEMENTATION_PLANS.md  JUCE_PLUGIN_DEVELOPMENT.md  JUCE_PLUGIN_DEVELOPMENT_PLAN.md  LLM_INTEGRATION.md  PHASE3B_MUSICAL_SOLVERS.md  PHASE3_DOCUMENTATION.md  POSTMORTEM_INSIGHTS.md  QUALITY_ASSURANCE.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  VISUAL_INTERFACE_DESIGN.md
examples/: midi_to_json_example.py
generated_midi/: Create a 2-measure simple bass line_20250925_091014.mid  Create a 4-measure bass line in C major_20250925_090854.mid  Create a complex funk bass line with sla_20250925_100834.mid  Create a funky bass line in C major_20250925_134642.mid  Create a funky bass line in C major_20250925_134734.mid  Create a funky bass line that makes me w_20250925_100040.mid  Create a funky bass line that makes me w_20250925_100115.mid  Create a funky bass line that makes me w_20250925_100227.mid  Create a jazz bass line in C m_20250924_231142.mid  Create a jazz piano melody in the style _20250925_134857.mid  (+28 more)
(+39 files in other folders)
